--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,11 @@ img.emoji {
   color: var(--text-light) !important;
 }
 
+.bg-black {
+  background-color: #16181B !important;
+  border-color: rgba(108, 117, 125, 0.3);
+}
+
 /* Custom text colours */
 .text-pink {
   color: var(--pink);
@@ -165,7 +170,7 @@ img.emoji {
   color: #fff;
   background-color: var(--pink);
   border-color: var(--pink);
-  box-shadow: 0 0 0 .25rem rgba(12, 78, 79, .5);
+  box-shadow: 0 0 0 .25rem rgba(191, 29, 144, .5);
 }
 
 .btn-teal {
@@ -201,7 +206,7 @@ img.emoji {
   color: #fff;
   background-color: var(--teal);
   border-color: var(--teal);
-  box-shadow: 0 0 0 .25rem rgba(12, 78, 79, .5);
+  box-shadow: 0 0 0 .25rem rgba(15, 100, 101, .5);
 }
 
 /* Index Page */
@@ -214,22 +219,20 @@ img.emoji {
 }
 
 /* Stuff Page */
-.card.bg-black {
-  border-color: rgba(108, 117, 125, 0.35);
-  box-shadow: 0px 5px 25px 0px rgba(, 0, 0, 0.4);
-  -webkit-box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.4);
-}
-
 .list-group-item.bg-black {
   border-color: rgba(108, 117, 125, 0.35);
 }
 
 .card-zoom:hover {
-  border-color: rgba(108, 117, 125, 0.4);
-  box-shadow: 0px 5px 25px 0px rgba(, 0, 0, 0.6);
-  -webkit-box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 5px 25px 0px rgba(, 0, 0, 0.4);
+  -webkit-box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.4);
   transform: scale(1.025);
   transition: transform 0.6s ease;
+}
+
+.card-drop-shadow {
+  box-shadow: 0px 5px 25px 0px rgba(, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
 }
 
 /* WoW Professions */
